Add show(dry-run) mode

--- a/etc/config.json
+++ b/etc/config.json
@@ -1,6 +1,6 @@
 {
     "sync_system" : {
-        "mode" : "dropbox | custom | google"
+        "mode" : "Dropbox"
     },
     "google" : {
         "token" : "",
